bk_ida/gccida/g0/dw2_build_landing_pads
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_build_landing_pads/src/except.c:2559:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_build_landing_pads/src/except.c:2563:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_build_landing_pads/src/except.c:2602:43: error: use of undeclared identifier 'byte_7735B0'
v4 = gen_rtx_fmt_s( ASM_INPUT, VOIDmode, &byte_7735B0); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_build_landing_pads/src/except.c:2611:30: error: invalid suffix 'xmode' on integer constant
v7 = gen_rtx_REG( *(short *)0xmode, 1); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dw2_build_landing_pads/src/obj/except.o] Error 1
